# AI_assisted_counceling_practice

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE_V1_GAP_PLAN.md  Dockerfile  PROGRESSION_CUE_DEADLOCK.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  promptbuilding.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_initial_tables.py  0002_scenario_authoring.py  0003_template_versions_and_session_state.py  0004_evaluation_version_metadata.py  0005_module1_behavior_architecture.py  0006_progression_beats_and_runtime_depth.py  0007_beat_state_ledger.py  0007_session_modality.py  0008_session_modality.py
backend/app/: main.py
backend/app/ai/: client.py  client_response_validator_agent.py  cue_response_analyzer_agent.py  evaluation_agent.py  exceptions.py  output_models.py  prompt_builder.py  runtime_context_builder.py  scenario_agent.py  skill_classifier_agent.py  speech.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  constants.py  exceptions.py  logging.py  security.py
backend/app/crud/: evaluation.py  faculty_review.py  message.py  scenario.py  scenario_version.py  session_state.py  simulation_session.py  user.py
backend/app/db/: base.py  seed.py  session.py
backend/app/repositories/: README.md
backend/app/schemas/: audio.py  user.py  (+8 more)
backend/scripts/: check_turn_pipeline.py  create_demo_users.py  entrypoint.sh  seed_database.py
backend/tests/: conftest.py
(+83 files in other folders)
